--- a/css/styles.css
+++ b/css/styles.css
@@ -482,15 +482,10 @@ address {
   background-color: #31d0aa;
 }
 
-.footer-subscribe-form {
-  display: flex;
-  gap: 24px;
-  align-items: flex-end;
+.footer-subscribe-container {
 }
-.footer-input-container {
-  margin-right: 24px;
-}
-.footer-subscribe-input-text {
+
+.footer-subscribe-text {
   color: #fff;
   font-size: 16px;
   font-weight: 500;
@@ -498,18 +493,24 @@ address {
   letter-spacing: 0.02em;
   margin-bottom: 16px;
 }
-.footer-subscribe-email-input {
+
+.footer-subscribe-form {
+  display: flex;
+  gap: 24px;
+}
+.footer-subscribe-input {
   background-color: transparent;
   width: 264px;
   height: 40px;
   flex-shrink: 0;
   border-radius: 4px;
   border: 1px solid #fff;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-  padding-top: 8px;
-  padding-bottom: 8px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  color: #ffffff;
   padding-left: 16px;
-  padding-right: 212px;
 }
 .footer-subscribe-email-input::placeholder {
   color: #fff;
@@ -520,29 +521,27 @@ address {
   line-height: 0.02;
   letter-spacing: 0.03em;
 }
-.footer-subscribe-email-button {
-  display: inline-flex;
+.footer-subscribe-button {
+  display: flex;
   padding: 8px 24px;
   justify-content: center;
   align-items: center;
-  gap: 16px;
-  border: none;
-  border-radius: 4px;
-  background: #4d5ae5;
-  width: 165px;
-  height: 40px;
-}
-
-.footer-subscribe-button-text {
-  color: #fff;
-  text-align: center;
-  font-family: inherit;
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
+  color: #fff;
+  cursor: pointer;
+  background-color: #4d5ae5;
+  border: none;
+  border-radius: 4px;
+  min-width: 165px;
+  height: 40px;
 }
+
 .footer-subscribe-button-icon {
+  margin-left: 16px;
   fill: #ffffff;
 }
 /* =============================================================== */
@@ -557,18 +556,25 @@ address {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
+
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal {
   width: 408px;
-  height: 584px;
+  min-height: 584px;
   border-radius: 4px;
   background: #fcfcfc;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 72px 24px 24px 24px;
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-button {
@@ -577,18 +583,26 @@ address {
   border-radius: 50%;
   background-color: #e7e9fc;
   border: 1px solid rgba(0, 0, 0, 0.1);
-
   position: absolute;
-  top: 32px;
-  right: 32px;
+  top: 24px;
+  right: 24px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-close-icon {
+.moda .modal-close-icon {
   fill: #2e2f42;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-close-button:focus {
+.modal-close-button:hover .modal-close-button:focus {
   background-color: #404bbf;
+  border: none;
 }
-.modal-close-button:focus .modal-close-icon {
+.modal-close-button:hover .modal-close-icon {
   fill: #ffffff;
 }
 
@@ -599,6 +613,7 @@ address {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  margin-bottom: 16px;
 }
 
 .modal-form {
@@ -614,6 +629,8 @@ address {
   font-weight: 400;
   line-height: 1.17;
   letter-spacing: 0.04em;
+  display: block;
+  margin-bottom: 4px;
 }
 .modal-input-wrap {
   position: relative;
@@ -626,6 +643,7 @@ address {
   border: 1px solid rgba(46, 47, 66, 0.4);
   outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding-left: 38px;
 }
 
 .modal-input:focus {
@@ -645,6 +663,10 @@ address {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.modal-text-field {
+  margin-bottom: 16px;
+}
+
 .modal-input-textarea {
   width: 360px;
   height: 120px;
@@ -654,13 +676,19 @@ address {
   outline: transparent;
   padding: 8px 16px;
   resize: none;
-}
-.modal-input-textarea::placeholder {
   color: rgba(46, 47, 66, 0.4);
   font-size: 12px;
   font-weight: 400;
   line-height: 1.17;
   letter-spacing: 0.04em;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-input-textarea:focus {
+  border-color: #4d5ae5;
+}
+
+.modal-check-field {
+  margin-bottom: 24px;
 }
 
 .check-text {
@@ -673,26 +701,27 @@ address {
   align-items: center;
 }
 
-.check-text a {
+.privacy-policy-link {
   color: #4d5ae5;
   text-decoration-line: underline;
 }
-.check-text span {
+.check-wrap {
   width: 16px;
   height: 16px;
   border-radius: 2px;
   border: 1px solid rgba(46, 47, 66, 0.4);
-  display: flex;
+  display: inline-flex;
   justify-content: center;
   align-items: center;
   margin-right: 8px;
   fill: transparent;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.check-input:checked + .check-text span {
+.check-input:checked + .check-text .check-wrap {
   background-color: #404bbf;
+  border: none;
   border: 1px solid #404bbf;
   fill: #f4f4fd;
 }
@@ -700,33 +729,30 @@ address {
 .modal-check-icon {
 }
 
-.modal-button-wrap {
-  text-align: center;
-}
-
 .form-send-button {
-  width: 169px;
+  display: block;
+  min-width: 169px;
   height: 56px;
   border-radius: 4px;
   background: #4d5ae5;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-  padding: 16px, 32px;
+  padding: 16px 32px;
 
   color: #fff;
   text-align: center;
-  font-family: inherit;
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
 
   cursor: pointer;
-  margin-top: 24px;
+  margin: 0 auto;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-send-button:hover,
 .form-send-button:focus {
+  background: #404bbf;
 }
 
 .is-open {
