--- a/css/styles.css
+++ b/css/styles.css
@@ -507,6 +507,7 @@ address {
   flex-shrink: 0;
   border-radius: 4px;
   border: 1px solid #fff;
+  font-size: 12px;
   line-height: 1.5;
   letter-spacing: 0.04em;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -600,14 +601,20 @@ address {
   fill: #2e2f42;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-close-button:hover .modal-close-button:focus {
+.modal-close-button:hover {
   background-color: #404bbf;
   border: none;
 }
-.modal-close-button:focus
-  .modal-close-icon
-  .modal-close-button:hover
-  .modal-close-icon {
+
+.modal-close-button:focus {
+  background-color: #404bbf;
+  border: none;
+}
+.modal-close-button:focus .modal-close-icon {
+  fill: #ffffff;
+}
+
+.modal-close-button:hover .modal-close-icon {
   fill: #ffffff;
 }
 
@@ -727,7 +734,6 @@ address {
 .check-input:checked + .check-text .check-wrap {
   background-color: #404bbf;
   border: none;
-  border: 1px solid #404bbf;
   fill: #f4f4fd;
 }
 
@@ -738,6 +744,7 @@ address {
   display: block;
   min-width: 169px;
   height: 56px;
+  border: none;
   border-radius: 4px;
   background: #4d5ae5;
   padding: 16px 32px;
