--- a/css/styles.css
+++ b/css/styles.css
@@ -709,7 +709,6 @@ address {
   font-weight: 400;
   line-height: 1.17;
   letter-spacing: 0.04em;
-  display: flex;
   align-items: center;
 }
 
@@ -718,7 +717,7 @@ address {
   text-decoration-line: underline;
 }
 .check-wrap {
-  display: flex;
+  display: inline-flex;
   width: 16px;
   height: 16px;
   border-radius: 2px;
